--- a/html/user/timeline.html
+++ b/html/user/timeline.html
@@ -22,6 +22,7 @@
 
 <body class="profile-page">
   <!-- Navbar -->
+  <div id = "testing"></div>
   <nav class="navbar navbar-expand-lg fixed-top navbar-transparent " color-on-scroll="100">
     <div class="container">
       <div class="navbar-translate">
@@ -447,6 +448,40 @@
     </footer>
   </div>
   <!--   Core JS Files   -->
+
+
+
+  <script src="../assets/js/core/jquery.min.js" type="text/javascript"></script>
+  <script src="../assets/js/core/popper.min.js" type="text/javascript"></script>
+  <script src="../assets/js/core/bootstrap.min.js" type="text/javascript"></script>
+  <script src="../assets/js/plugins/perfect-scrollbar.jquery.min.js"></script>
+  <script src="../assets/js/plugins/bootstrap-switch.js"></script>
+  <script src="../assets/js/plugins/nouislider.min.js" type="text/javascript"></script>
+  <script src="../assets/js/plugins/chartjs.min.js"></script>
+  <script src="../assets/js/plugins/moment.min.js"></script>
+  <script src="../assets/js/plugins/bootstrap-datetimepicker.js" type="text/javascript"></script>
+  <script src="../assets/demo/demo.js"></script>
+  <script src="../assets/js/blk-design-system.min.js?v=1.0.0" type="text/javascript"></script>
+
+  <script>
+
+        $.post("../api/user.php",
+                {
+                  user_id: localStorage.getItem("user_id"),
+                },
+                function(data){
+          console.log("bateu");
+                  let obj = JSON.parse(data);
+                  if(obj.status == 200) {
+                    // localStorage.setItem("user_id", obj.data.user_id);
+                    // window.location.href = "user/profile.html";
+                    alert("foi")
+                  } else {
+                    alert("Usuário ou senha inválida")
+                  }
+                });
+  </script>
+
   <script src="../assets/js/core/jquery.min.js" type="text/javascript"></script>
   <script src="../assets/js/core/popper.min.js" type="text/javascript"></script>
   <script src="../assets/js/core/bootstrap.min.js" type="text/javascript"></script>
