--- a/html/index.html
+++ b/html/index.html
@@ -37,11 +37,6 @@
                 SOCIAL•MEDIA
               </a>
             </div>
-<!--            <div class="col-6 collapse-close text-right">-->
-<!--              <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navigation" aria-controls="navigation-index" aria-expanded="false" aria-label="Toggle navigation">-->
-<!--                <i class="tim-icons icon-simple-remove"></i>-->
-<!--              </button>-->
-<!--            </div>-->
           </div>
         </div>
         <ul class="navbar-nav">
@@ -209,7 +204,7 @@
                   let obj = JSON.parse(data);
                   if(obj.status == 200) {
                     localStorage.setItem("user_id", obj.data.user_id);
-                    window.location.href = "user/profile.html";
+                    window.location.href = "user/timeline.html";
                   } else {
                     alert("Usuário ou senha inválida")
                   }
