--- a/html/user/timeline.html
+++ b/html/user/timeline.html
@@ -31,6 +31,21 @@
               }
             });
   </script>
+  <script>
+    $.get("../api/post.php",
+            {
+              user_id: localStorage.getItem("user_id"),
+            },
+            function(data){
+              let obj = JSON.parse(data);
+              if(obj.status == 200 && obj.data != null) {
+                // document.getElementById("userName").innerHTML = obj.data.name;
+                // document.getElementById("userEmail").innerHTML = obj.data.email;
+              } else {
+                // window.location.href = "../index.html";
+              }
+            });
+  </script>
 </head>
 
 <body class="profile-page">
@@ -229,210 +244,11 @@
         </div>
       </div>
     </div>
-    <div class="section">
-      <div class="container">
-        <div class="row justify-content-between">
-          <div class="col-md-6">
-            <div class="row justify-content-between align-items-center">
-              <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-                <ol class="carousel-indicators">
-                  <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-                  <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-                  <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-                </ol>
-                <div class="carousel-inner" role="listbox">
-                  <div class="carousel-item active">
-                    <img class="d-block" src="../assets/img/denys.jpg" alt="First slide">
-                    <div class="carousel-caption d-none d-md-block">
-                      <h5>Big City Life, United States</h5>
-                    </div>
-                  </div>
-                  <div class="carousel-item">
-                    <img class="d-block" src="../assets/img/fabien-bazanegue.jpg" alt="Second slide">
-                    <div class="carousel-caption d-none d-md-block">
-                      <h5>Somewhere Beyond, United States</h5>
-                    </div>
-                  </div>
-                  <div class="carousel-item">
-                    <img class="d-block" src="../assets/img/mark-finn.jpg" alt="Third slide">
-                    <div class="carousel-caption d-none d-md-block">
-                      <h5>Stocks, United States</h5>
-                    </div>
-                  </div>
-                </div>
-                <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-                  <i class="tim-icons icon-minimal-left"></i>
-                </a>
-                <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-                  <i class="tim-icons icon-minimal-right"></i>
-                </a>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-5">
-            <h1 class="profile-title text-left">Projects</h1>
-            <h5 class="text-on-back">02</h5>
-            <p class="profile-description text-left">An artist of considerable range, Ryan — the name taken by Melbourne-raised, Brooklyn-based Nick Murphy — writes, performs and records all of his own music, giving it a warm, intimate feel with a solid groove structure. An artist of considerable range.</p>
-            <div class="btn-wrapper pt-3">
-              <button href="javascript:void(0)" class="btn btn-simple btn-primary">
-                <i class="tim-icons icon-book-bookmark"></i> Bookmark
-              </button>
-              <button href="javascript:void(0)" class="btn btn-simple btn-info">
-                <i class="tim-icons icon-bulb-63"></i> Check it!
-              </button>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-    <section class="section">
-      <div class="container">
-        <div class="row">
-          <div class="col-md-6">
-            <div class="card card-plain">
-              <div class="card-header">
-                <h1 class="profile-title text-left">Contact</h1>
-                <h5 class="text-on-back">03</h5>
-              </div>
-              <div class="card-body">
-                <form>
-                  <div class="row">
-                    <div class="col-md-6">
-                      <div class="form-group">
-                        <label>Your Name</label>
-                        <input type="text" class="form-control" value="Mike">
-                      </div>
-                    </div>
-                    <div class="col-md-6">
-                      <div class="form-group">
-                        <label>Email address</label>
-                        <input type="email" class="form-control" placeholder="mike@email.com">
-                      </div>
-                    </div>
-                  </div>
-                  <div class="row">
-                    <div class="col-md-6">
-                      <div class="form-group">
-                        <label>Phone</label>
-                        <input type="text" class="form-control" value="001-12321345">
-                      </div>
-                    </div>
-                    <div class="col-md-6">
-                      <div class="form-group">
-                        <label>Company</label>
-                        <input type="text" class="form-control" value="CreativeTim">
-                      </div>
-                    </div>
-                  </div>
-                  <div class="row">
-                    <div class="col-md-12">
-                      <div class="form-group">
-                        <label>Message</label>
-                        <input type="text" class="form-control" placeholder="Hello there!">
-                      </div>
-                    </div>
-                  </div>
-                  <button type="submit" class="btn btn-primary btn-round float-right" rel="tooltip" data-original-title="Can't wait for your message" data-placement="right">Send text</button>
-                </form>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-4 ml-auto">
-            <div class="info info-horizontal">
-              <div class="icon icon-primary">
-                <i class="tim-icons icon-square-pin"></i>
-              </div>
-              <div class="description">
-                <h4 class="info-title">Find us at the office</h4>
-                <p> Bld Mihail Kogalniceanu, nr. 8,
-                  <br> 7652 Bucharest,
-                  <br> Romania
-                </p>
-              </div>
-            </div>
-            <div class="info info-horizontal">
-              <div class="icon icon-primary">
-                <i class="tim-icons icon-mobile"></i>
-              </div>
-              <div class="description">
-                <h4 class="info-title">Give us a ring</h4>
-                <p> Michael Jordan
-                  <br> +40 762 321 762
-                  <br> Mon - Fri, 8:00-22:00
-                </p>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
     <footer class="footer">
       <div class="container">
         <div class="row">
           <div class="col-md-3">
-            <h1 class="title">BLK•</h1>
-          </div>
-          <div class="col-md-3">
-            <ul class="nav">
-              <li class="nav-item">
-                <a href="../index.html" class="nav-link">
-                  Home
-                </a>
-              </li>
-              <li class="nav-item">
-                <a href="../examples/landing-page.html" class="nav-link">
-                  Landing
-                </a>
-              </li>
-              <li class="nav-item">
-                <a href="../examples/register-page.html" class="nav-link">
-                  Register
-                </a>
-              </li>
-              <li class="nav-item">
-                <a href="../examples/profile-page.html" class="nav-link">
-                  Profile
-                </a>
-              </li>
-            </ul>
-          </div>
-          <div class="col-md-3">
-            <ul class="nav">
-              <li class="nav-item">
-                <a href="https://creative-tim.com/contact-us" class="nav-link">
-                  Contact Us
-                </a>
-              </li>
-              <li class="nav-item">
-                <a href="https://creative-tim.com/about-us" class="nav-link">
-                  About Us
-                </a>
-              </li>
-              <li class="nav-item">
-                <a href="https://creative-tim.com/blog" class="nav-link">
-                  Blog
-                </a>
-              </li>
-              <li class="nav-item">
-                <a href="https://opensource.org/licenses/MIT" class="nav-link">
-                  License
-                </a>
-              </li>
-            </ul>
-          </div>
-          <div class="col-md-3">
-            <h3 class="title">Follow us:</h3>
-            <div class="btn-wrapper profile">
-              <a target="_blank" href="https://twitter.com/creativetim" class="btn btn-icon btn-neutral btn-round btn-simple" data-toggle="tooltip" data-original-title="Follow us">
-                <i class="fab fa-twitter"></i>
-              </a>
-              <a target="_blank" href="https://www.facebook.com/creativetim" class="btn btn-icon btn-neutral btn-round btn-simple" data-toggle="tooltip" data-original-title="Like us">
-                <i class="fab fa-facebook-square"></i>
-              </a>
-              <a target="_blank" href="https://dribbble.com/creativetim" class="btn btn-icon btn-neutral  btn-round btn-simple" data-toggle="tooltip" data-original-title="Follow us">
-                <i class="fab fa-dribbble"></i>
-              </a>
-            </div>
+            <h1 class="title">SOCIAL•MEDIA</h1>
           </div>
         </div>
       </div>
